{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f619c7bb-1284-43cb-9c42-66e396e7335b",
            "actions": [
                {
                    "name": "ClickOrTap",
                    "type": "Button",
                    "id": "b376bbe9-adca-470c-8719-899efa124a65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c9893d1-d161-4a96-849a-4fbb5bf466cd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOrTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}